style: fix logo tagline spacing

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -79,7 +79,7 @@
   font-weight: 800;
   text-transform: uppercase;
   letter-spacing: 1.5px;
-  margin-top: -2px;
+  margin-top: 2px;
   padding-left: 2px;
 }
 
